--- a/virtual_cars/view/home/index.html
+++ b/virtual_cars/view/home/index.html
@@ -15,31 +15,322 @@
       <div class="selectors">
         <select name="marca" id="marca">
           <option value="">Marca</option>
+          <option value="AM">Fiat</option>
+          <option value="BA">Ford</option>
         </select>
 
-        <select name="modelo" id="modelo" disabled>
+        <select name="modelo" id="modelo">
           <option value="">Modelo</option>
+          <option value="AM">Civic</option>
+          <option value="BA">Fiorino</option>
         </select>
 
-        <select name="localizacao" id="localizacao" disabled>
-          <option value="">Cidade</option>
+        <select name="localizacao" id="localizacao">
+          <option value="">Estado</option>
+          <option value="AM">Amazonas</option>
+          <option value="BA">Bahia</option>
         </select>
       </div>
 
       <img class="logo-image-nav" src="../../public/images/icon.png" alt="logo">
+
       <a href="../user/login.html" class="btn-login">Entrar</a>
+
     </nav>
   </header>
 
   <main>
-    <div class="container" id="anuncios-container">
+    <div class="container">
+
+      <a href="../anuncio/anuncio.html" class="card-link">
+        <div class="card">
+          <h1 class="modelo-carro-card">Civic</h1>
+          <div class="img-container">
+            <img class="imagem-carro-card" src="../../public/images/image1.png" alt="imagem carro do anúncio">
+          </div>
+          <div class="aditional-info-card">
+            <p>Honda 2024</p>
+            <p>Uberlândia</p>
+          </div>
+          <b class="valor-carro-card">R$ 124.999,00</b>
         </div>
+      </a>
+
+      <a href="../anuncio/anuncio.html" class="card-link">
+        <div class="card">
+          <h1 class="modelo-carro-card">punto T-Jet</h1>
+          <div class="img-container">
+            <img class="imagem-carro-card" src="../../public/images/imagem2.jpeg" alt="imagem carro do anúncio">
+          </div>
+          <div class="aditional-info-card">
+            <p>Fiat 2013</p>
+            <p>Uberlândia</p>
+          </div>
+          <b class="valor-carro-card">R$ 39.999,00</b>
+        </div>
+      </a>
+
+      <a href="../anuncio/anuncio.html" class="card-link">
+        <div class="card">
+          <h1 class="modelo-carro-card">Fiesta</h1>
+          <div class="img-container">
+            <img class="imagem-carro-card" src="../../public/images/imagem3.webp" alt="imagem carro do anúncio">
+          </div>
+          <div class="aditional-info-card">
+            <p>Ford 2023</p>
+            <p>Uberlândia</p>
+          </div>
+          <b class="valor-carro-card">R$ 70.999,00</b>
+        </div>
+      </a>
+
+      <a href="../anuncio/anuncio.html" class="card-link">
+        <div class="card">
+          <h1 class="modelo-carro-card">Civic</h1>
+          <div class="img-container">
+            <img class="imagem-carro-card" src="../../public/images/imagem4.webp" alt="imagem carro do anúncio">
+          </div>
+          <div class="aditional-info-card">
+            <p>Ka 2023</p>
+            <p>Uberlândia</p>
+          </div>
+          <b class="valor-carro-card">R$ 50.999,00</b>
+        </div>
+      </a>
+
+      <a href="../anuncio/anuncio.html" class="card-link">
+        <div class="card">
+          <h1 class="modelo-carro-card">Fiesta</h1>
+          <div class="img-container">
+            <img class="imagem-carro-card" src="../../public/images/imagem3.webp" alt="imagem carro do anúncio">
+          </div>
+          <div class="aditional-info-card">
+            <p>Ford 2023</p>
+            <p>Uberlândia</p>
+          </div>
+          <b class="valor-carro-card">R$ 70.999,00</b>
+        </div>
+      </a>
+
+      <a href="../anuncio/anuncio.html" class="card-link">
+        <div class="card">
+          <h1 class="modelo-carro-card">Civic</h1>
+          <div class="img-container">
+            <img class="imagem-carro-card" src="../../public/images/imagem4.webp" alt="imagem carro do anúncio">
+          </div>
+          <div class="aditional-info-card">
+            <p>Ka 2023</p>
+            <p>Uberlândia</p>
+          </div>
+          <b class="valor-carro-card">R$ 50.999,00</b>
+        </div>
+      </a>
+
+      <a href="../anuncio/anuncio.html" class="card-link">
+        <div class="card">
+          <h1 class="modelo-carro-card">Civic</h1>
+          <div class="img-container">
+            <img class="imagem-carro-card" src="../../public/images/image1.png" alt="imagem carro do anúncio">
+          </div>
+          <div class="aditional-info-card">
+            <p>Honda 2024</p>
+            <p>Uberlândia</p>
+          </div>
+          <b class="valor-carro-card">R$ 124.999,00</b>
+        </div>
+      </a>
+
+
+      <a href="../anuncio/anuncio.html" class="card-link">
+        <div class="card">
+          <h1 class="modelo-carro-card">Civic</h1>
+          <div class="img-container">
+            <img class="imagem-carro-card" src="../../public/images/imagem4.webp" alt="imagem carro do anúncio">
+          </div>
+          <div class="aditional-info-card">
+            <p>Ka 2023</p>
+            <p>Uberlândia</p>
+          </div>
+          <b class="valor-carro-card">R$ 50.999,00</b>
+        </div>
+      </a>
+
+      <a href="../anuncio/anuncio.html" class="card-link">
+        <div class="card">
+          <h1 class="modelo-carro-card">Civic</h1>
+          <div class="img-container">
+            <img class="imagem-carro-card" src="../../public/images/image1.png" alt="imagem carro do anúncio">
+          </div>
+          <div class="aditional-info-card">
+            <p>Honda 2024</p>
+            <p>Uberlândia</p>
+          </div>
+          <b class="valor-carro-card">R$ 124.999,00</b>
+        </div>
+      </a>
+
+      <a href="../anuncio/anuncio.html" class="card-link">
+        <div class="card">
+          <h1 class="modelo-carro-card">punto T-Jet</h1>
+          <div class="img-container">
+            <img class="imagem-carro-card" src="../../public/images/imagem2.jpeg" alt="imagem carro do anúncio">
+          </div>
+          <div class="aditional-info-card">
+            <p>Fiat 2013</p>
+            <p>Uberlândia</p>
+          </div>
+          <b class="valor-carro-card">R$ 39.999,00</b>
+        </div>
+      </a>
+
+      <a href="../anuncio/anuncio.html" class="card-link">
+        <div class="card">
+          <h1 class="modelo-carro-card">Civic</h1>
+          <div class="img-container">
+            <img class="imagem-carro-card" src="../../public/images/image1.png" alt="imagem carro do anúncio">
+          </div>
+          <div class="aditional-info-card">
+            <p>Honda 2024</p>
+            <p>Uberlândia</p>
+          </div>
+          <b class="valor-carro-card">R$ 124.999,00</b>
+        </div>
+      </a>
+
+      <a href="../anuncio/anuncio.html" class="card-link">
+        <div class="card">
+          <h1 class="modelo-carro-card">punto T-Jet</h1>
+          <div class="img-container">
+            <img class="imagem-carro-card" src="../../public/images/imagem2.jpeg" alt="imagem carro do anúncio">
+          </div>
+          <div class="aditional-info-card">
+            <p>Fiat 2013</p>
+            <p>Uberlândia</p>
+          </div>
+          <b class="valor-carro-card">R$ 39.999,00</b>
+        </div>
+      </a>
+
+      <a href="../anuncio/anuncio.html" class="card-link">
+        <div class="card">
+          <h1 class="modelo-carro-card">Fiesta</h1>
+          <div class="img-container">
+            <img class="imagem-carro-card" src="../../public/images/imagem3.webp" alt="imagem carro do anúncio">
+          </div>
+          <div class="aditional-info-card">
+            <p>Ford 2023</p>
+            <p>Uberlândia</p>
+          </div>
+          <b class="valor-carro-card">R$ 70.999,00</b>
+        </div>
+      </a>
+
+      <a href="../anuncio/anuncio.html" class="card-link">
+        <div class="card">
+          <h1 class="modelo-carro-card">Civic</h1>
+          <div class="img-container">
+            <img class="imagem-carro-card" src="../../public/images/imagem4.webp" alt="imagem carro do anúncio">
+          </div>
+          <div class="aditional-info-card">
+            <p>Ka 2023</p>
+            <p>Uberlândia</p>
+          </div>
+          <b class="valor-carro-card">R$ 50.999,00</b>
+        </div>
+      </a>
+
+      <a href="../anuncio/anuncio.html" class="card-link">
+        <div class="card">
+          <h1 class="modelo-carro-card">Fiesta</h1>
+          <div class="img-container">
+            <img class="imagem-carro-card" src="../../public/images/imagem3.webp" alt="imagem carro do anúncio">
+          </div>
+          <div class="aditional-info-card">
+            <p>Ford 2023</p>
+            <p>Uberlândia</p>
+          </div>
+          <b class="valor-carro-card">R$ 70.999,00</b>
+        </div>
+      </a>
+
+      <a href="../anuncio/anuncio.html" class="card-link">
+        <div class="card">
+          <h1 class="modelo-carro-card">Civic</h1>
+          <div class="img-container">
+            <img class="imagem-carro-card" src="../../public/images/imagem4.webp" alt="imagem carro do anúncio">
+          </div>
+          <div class="aditional-info-card">
+            <p>Ka 2023</p>
+            <p>Uberlândia</p>
+          </div>
+          <b class="valor-carro-card">R$ 50.999,00</b>
+        </div>
+      </a>
+
+      <a href="../anuncio/anuncio.html" class="card-link">
+        <div class="card">
+          <h1 class="modelo-carro-card">Civic</h1>
+          <div class="img-container">
+            <img class="imagem-carro-card" src="../../public/images/image1.png" alt="imagem carro do anúncio">
+          </div>
+          <div class="aditional-info-card">
+            <p>Honda 2024</p>
+            <p>Uberlândia</p>
+          </div>
+          <b class="valor-carro-card">R$ 124.999,00</b>
+        </div>
+      </a>
+
+
+      <a href="../anuncio/anuncio.html" class="card-link">
+        <div class="card">
+          <h1 class="modelo-carro-card">Civic</h1>
+          <div class="img-container">
+            <img class="imagem-carro-card" src="../../public/images/imagem4.webp" alt="imagem carro do anúncio">
+          </div>
+          <div class="aditional-info-card">
+            <p>Ka 2023</p>
+            <p>Uberlândia</p>
+          </div>
+          <b class="valor-carro-card">R$ 50.999,00</b>
+        </div>
+      </a>
+
+      <a href="../anuncio/anuncio.html" class="card-link">
+        <div class="card">
+          <h1 class="modelo-carro-card">Civic</h1>
+          <div class="img-container">
+            <img class="imagem-carro-card" src="../../public/images/image1.png" alt="imagem carro do anúncio">
+          </div>
+          <div class="aditional-info-card">
+            <p>Honda 2024</p>
+            <p>Uberlândia</p>
+          </div>
+          <b class="valor-carro-card">R$ 124.999,00</b>
+        </div>
+      </a>
+
+      <a href="../anuncio/anuncio.html" class="card-link">
+        <div class="card">
+          <h1 class="modelo-carro-card">punto T-Jet</h1>
+          <div class="img-container">
+            <img class="imagem-carro-card" src="../../public/images/imagem2.jpeg" alt="imagem carro do anúncio">
+          </div>
+          <div class="aditional-info-card">
+            <p>Fiat 2013</p>
+            <p>Uberlândia</p>
+          </div>
+          <b class="valor-carro-card">R$ 39.999,00</b>
+        </div>
+      </a>
+
+    </div>
   </main>
 
   <footer>
     <h3>Vitual Cars não é um site real</h3>
   </footer>
-  <script src="home.js"></script>
+
 </body>
 
 </html>
